src/objects/Risk_History__c.object
<CustomObject>
    <description>Keeps Risk history for impact and likelihood values.</description>
    <fields>
        <fullName>Change_Description__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Impact_New__c</fullName>
        <label>Expected Current Impact (New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Impact_Old__c</fullName>
        <label>Expected Current Impact (Old)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Likelihood_New__c</fullName>
        <label>Expected Current Likelihood (New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Likelihood_Old__c</fullName>
        <label>Expected Current Likelihood (Old)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Impact_New__c</fullName>
        <label>Expected Inherent Impact (New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Impact_Old__c</fullName>
        <label>Expected Inherent Impact (Old)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Likelihood_New__c</fullName>
        <label>Expected Inherent Likelihood (New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Likelihood_Old__c</fullName>
        <label>Expected Inherent Likelihood (Old)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Impact_New__c</fullName>
        <label>Expected Target Impact (New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Impact_Old__c</fullName>
        <label>Expected Target Impact (Old)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Likelihood_New__c</fullName>
        <label>Expected Target Likelihood (New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Likelihood_Old__c</fullName>
        <label>Expected Target Likelihood (Old)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Risk History</relationshipLabel>
        <relationshipName>Risk_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <label>Risk History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expected_Current_Impact_New__c</columns>
        <columns>Expected_Current_Likelihood_New__c</columns>
        <columns>Risk__c</columns>
        <columns>Change_Description__c</columns>
        <columns>Valuation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RH-{0000}</displayFormat>
        <label>Risk History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>